[metadata]
name = bleparser
version = 1.3.0
author = Ernst79
author_email = e.klamer@gmail.com
description = Parser for passive BLE advertisements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ernst79/bleparser
project_urls =
    Bug Tracker = https://github.com/Ernst79/bleparser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = package
packages = find:
python_requires = >=3.7
install_requires =
    pycryptodomex

[options.packages.find]
where = package
exclude =
    tests
